--- a/corrections/cover.Rmd
+++ b/corrections/cover.Rmd
@@ -3,9 +3,7 @@ title: "Cover letter"
 author: "Adam Howes"
 output:
   pagedown::html_letter:
-    self_contained: false
-links-to-footnotes: true
-paged-footnotes: true
+    self_contained: true
 # uncomment this line to produce HTML and PDF in RStudio:
 knit: pagedown::chrome_print
 ---
@@ -16,7 +14,7 @@ Email: ath19@ic.ac.uk
 :::
 
 ::: date
-August, 2024
+September, 2024
 :::
 
 Dear Dr Paciorek and Dr Sykulski,
