--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1023,7 +1023,7 @@ knitr::include_graphics("figures/naomi-aghq/loa-loa-worst-node.png")
 
 For both the suitability and prevalence posterior mean, using Laplace marginals rather than Gaussian marginals substantially reduced error compared to NUTS (Figures \@ref(fig:conditional-simulation-phi-diff-fixed) and \@ref(fig:conditional-simulation-rho-diff-fixed)).
 As the hyperparameter posteriors for each approach were the same, differences in Gaussian field simulation results were due to differences in latent field posterior marginals at each of the 190 sites, shown in Figure \@ref(fig:loa-loa-mean-sd-abs).
-At some sites, the differences in ECDF were subtantial (Figure \@ref(fig:loa-loa-worst-node)).
+At some sites, the differences in ECDF were substantial (Figure \@ref(fig:loa-loa-worst-node)).
 Figure \@ref(fig:nuts-loa-loa) shows that the results from NUTS were suitable for use, and therefore that this comparison is valid.
 
 (ref:loa-loa-time) The number of minutes taken to perform inference for the Loa loa ELGM using each approach given in Table \@ref(tab:loaloa-approaches).
