Another spelling mistake (though doesn't matter)

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1209,7 +1209,7 @@ y^{A}_I = \sum_{i \in I} y^{A}_i. (\#eq:art-aggregate)
 \end{equation}
 Let the probability of a person in strata $i$ travelling from district $x(i) = x$ to $x'$ to receive ART be
 \begin{equation}
-\pi_{i, x(i) = x, x'} = \rho_{i} \alpha_{i} \gamma_{x(i) = x, x'}. (\#eq:recieve-art)
+\pi_{i, x(i) = x, x'} = \rho_{i} \alpha_{i} \gamma_{x(i) = x, x'}. (\#eq:receive-art)
 \end{equation}
 These probabilities are the product of three probabilities, each for a person in strata $i$:
 
