Correction on Gaussian and Laplace marginals

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -246,11 +246,11 @@ These are:
 1. In Section 6.2.2 where I use conditional Gaussian field simulation to obtain inferences about Loa loa prevalence over a fine spatial grid based on inferences at the 190 sampled villages.
 2. In Section 6.5.5 where I calculate functions of the exceedance probabilities for ART coverage and HIV incidence of the Naomi model in Malawi.
 
-In the first case, I found (Figure 6.11 and Figure 6.12) that the Laplace marginals approach (which suffers from the concern raised) outperforms the Gaussian marginals approach (which does not) as compared with NUTS (which also takes posterior dependences into account).
+In the first case, I found (Figure 6.11 and Figure 6.12) that the Laplace marginals approach (which suffers from the concern raised) outperforms the Gaussian marginals approach (which does not) as compared with NUTS (which also takes posterior dependence into account).
 In the second case, I am using the Gaussian marginals approach (mixture of Gaussians) hence this is not a concern.
 As such, I have added the following sentence to Section 6.2.2:
 
-> Something here!
+> This improvement is even given that draws from the Laplace marginals do not take posterior dependences into account like the draws from the mixture of Gaussians used to construct the Gaussian marginals.
 
 \begin{examiner}
 Relatedly, assuming I'm understanding correctly, there is an important tradeoff between using Laplace marginals for improved accuracy for latent marginals and using the Gaussian mixture over the quadrature points, which allows one to make draws and do inference on any derived quantity in a way that takes account of posterior dependence between and amongst hyperparameters and latent process values.
@@ -259,6 +259,9 @@ If that's the case, I think it's worth pointing this out and discussing when one
 
 This is correct.
 Indeed the recent work of @chiuchiolo2023joint aims to extend `R-INLA` to use Laplace approximations to estimate subsets of the latent field, beyond merely marginals.
+I have added the following note to the discussion:
+
+> Some note here
 
 \newpage
 
