Run through of thorough spelling check

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -517,7 +517,7 @@ That said, even under SRS, nonresponse analogous bias can be caused by non-respo
 ### Survey design
 
 The DHS employs a two-stage sampling procedure, outlined here following @measure2012sampling.
-In the first stage, ennumeration areas from a recently conducted census are typically used as the primary sampling unit, or cluster.
+In the first stage, enumeration areas from a recently conducted census are typically used as the primary sampling unit, or cluster.
 Each cluster is assigned to a strata $h$ by region, as well as by urban-rural status.
 After appropriate strata sample sizes $n_h$ are determined, EAs are sampled with probability proportional to number of households
 \begin{equation}
