--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -335,7 +335,7 @@ This covariance structure is equivalent to that obtained by aggregating a spatia
 In the machine learning literature, models of this kind have been studied under the name aggregated Gaussian processes [@law2018variational; @tanaka2019spatially; @yousefi2019multi; @hamelijnck2019multi; @chau2021deconditional].
 Examples of use of this model in statistical practice are rare.
 
-#### Accounting for heterogeneity {#ik-hetrogeneity}
+#### Accounting for heterogeneity {#ik-heterogeneity}
 
 Additional information accounting for heterogeneity over $A_i$ may be incorporated into the integrated kernel.
 This can be accomplished using weighting distributions $\{w_i\}$ which represent an unequal contribution of each point to the similarity measure.
@@ -718,7 +718,7 @@ It is difficult to see how any spatial random model would perform well in this s
 
 2. For the 2017 PHIA survey in Malawi the Besag and BYM2 models performed the best, followed by the kernel models, and then the IID model (Figure \@ref(fig:crps-mean-se-mwi2016phia)).
 While the LOO and SLOO CRPS values for IID, Besag and BYM2 models were similar, for the kernel models forecasting performance was substantially reduced by leaving out adjacent districts.
-This finding is suprising, as the kernel models make use of more distant correlations, and it is the adjacency-based models that one would intuitively expect to be hampered more by the SLOO-CV.
+This finding is surprising, as the kernel models make use of more distant correlations, and it is the adjacency-based models that one would intuitively expect to be hampered more by the SLOO-CV.
 For the IID model, that LOO and SLOO performance are similar is no surprise as in all cases the IID model should be predicting the mean.
 Though less data are available in the SLOO case, this should be of little consequence.
 
@@ -739,7 +739,7 @@ However, the transferability of this finding to applied settings is limited by t
 First and foremost, it is usually impossible to know that real data was generated from any particular process.
 Second, the synthetic data study used the same kernel, Matérn with $\nu = 3/2$ (Equation \@ref(eq:matern)), for both simulation and inference, and as such represents a best-case.
 Third, specification of the lengthscale prior distribution is challenging, and easy to do badly.
-Finally, aggregation via the integrated kernel occured at the level of the latent field, despite the fact that most of the time we expect aggregation to occur at the level of the data.
+Finally, aggregation via the integrated kernel occurred at the level of the latent field, despite the fact that most of the time we expect aggregation to occur at the level of the data.
 If the link function $g$ is the identity or linear then the two are equivalent, but for non-linear link functions there is a discrepancy, which was not addressed in this study.
 
 This chapter did not consider use of the stochastic partial differential equation (SPDE) approximation of @lindgren2011explicit as a potentially more computationally efficient way to implement integrated kernel models [@wilson2018pointless].
@@ -754,7 +754,7 @@ The work in this chapter does not address the broader question of under which ci
 The adjacency-based models considered in this study were limited to the Besag and BYM2 model.
 Although these are perhaps the most widely used adjacency-based models, others could have been considered.
 Examples include the more general weighted ICAR model discussed in Section \@ref(weighted-icar).
-Additionally, it would be of interest to implement the integrated kernel model with population-based weighting (Section \@ref(ik-hetrogeneity)).
+Additionally, it would be of interest to implement the integrated kernel model with population-based weighting (Section \@ref(ik-heterogeneity)).
 
 The models used for spatial structure in this chapter were all stationary.
 Although stationarity assumptions may be violated by HIV survey data, it remains challenging to estimate non-stationary spatial structure [@paciorek2006spatial].
