--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -268,7 +268,7 @@ p(\mathbf{y}_{ita}, m_{ita}) &= \exp(-\kappa_{ita}) \frac{(\kappa_{ita})^{m_{ita
 &= \prod_k \text{Poisson} \left( y_{itak} \, | \, \kappa_{itak} \right). (\#eq:prodpoisson)
 \end{align}
 As expected, Equation \@ref(eq:prodpoisson) corresponds to the product of independent Poisson likelihoods defined in Equation \@ref(eq:poisson1).
-This exercise demonstrates that the Poisson log-linear model contains within it a multinomial likelihood, with a Poission prior on the sample size.
+This exercise demonstrates that the Poisson log-linear model contains within it a multinomial likelihood, with a Poisson prior on the sample size.
 
 For this model to be equivalent to a multinomial logistic regression model, the normalisation constants $m_{ita}$ must be recovered exactly.
 That is to say, their posterior distributions should be as close as possible to a Dirac delta distribution with value zero everywhere but the known value of the sample size.
