--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -676,7 +676,7 @@ path <- paste0("resources/beyond-borders/", resource_version, "/depends/crps-mea
 knitr::include_graphics(path)
 ```
 
-(ref:cv-crps) The mean pointwise leave-one-out and spatial leave-one-out CRPS in estimating $\rho_i$, with standard errors, for each inferential model across the four considered PHIA surveys. The units used in this table are thousandths.
+(ref:cv-crps) The mean pointwise leave-one-out and spatial leave-one-out CRPS in estimating $\rho_i$ for each inferential model across the four considered PHIA surveys. The units used in this table are thousandths. For standard errors, see Figure \@ref(fig:crps-mean-se-surveys).
 
 ```{r cv-crps}
 gt_cv_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_cv-crps.rds"))
