Note about Tanzania DIC and WAIC

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -202,6 +202,10 @@ There were 8 surveys that the CPO and DIC disagreed about:
 There were very large differences in the DIC values for three of the four surveys in Tanzania specifically.
 Hence, the strange results are due to differences in how the CPO and DIC (and WAIC) rank performance of the models in Tanzania.
 This is a confusing finding, but supports the choice of Model 4 over Model 3.
+I have clarified this by noting in the caption for Figure 5.4 that:
+
+> The relatively poor DIC and WAIC performance of Besag random effects was due to outlying values of these criteria for three of four surveys in Tanzania, and as such may be erroneous.
+ 
 Further investigation of this issue could look to disentangle the large DIC difference in Tanzania further, including by district, age, and sex, as the extent of the difference is suggestive to me of something suspicious (rather than merely a typical difference of opinion between two measures).
 
 An additional check I performed was to assess the values of `cpo$failure`.
