Add text about Laplace marginals vs joint

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -447,6 +447,9 @@ As such, Equation \@ref(eq:lamarginal) may instead be represented by its evaluat
 One approach is to chose these nodes based on a one-dimensional AGHQ rule, using the mode and standard deviation of the Gaussian approximation to avoid unnecessary computation of the Laplace marginal mode and standard deviation.
 The probability density function of the marginal posterior may then be recovered using a Lagrange polynomial or spline interpolant to the log probabilities.
 
+An important downside of the Laplace approach is that posterior dependences between posterior marginal draws are not preserved, unlike in the mixture of Gaussians case (Equation \@ref(eq:mixgaussian)).
+Recent work using Gaussian copulas [@chiuchiolo2023joint] aims to retain the accuracy of the Laplace marginals strategy while obtaining a joint approximation.
+
 #### Simplified Laplace marginals {#simplified-laplace-marginals}
 
 When the latent field $\mathbf{x}$ is a Gauss-Markov random fields [GMRF; @rue2005gaussian] it is possible to efficiently approximate the Laplace marginals in Section \@ref(laplace-marginals).
