--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -265,10 +265,11 @@ If that's the case, I think it's worth pointing this out and discussing when one
 \end{examiner}
 
 This is correct.
-Indeed the recent work of @chiuchiolo2023joint aims to extend `R-INLA` to use Laplace approximations to estimate subsets of the latent field, beyond merely marginals.
-I have added the following note to the discussion:
+The recent work of @chiuchiolo2023joint aims to extend `R-INLA` to use Laplace approximations to estimate subsets of the latent field, beyond merely marginals.
+I have added the following note to Section 6.1.3.2:
 
-> Some note here
+> An important downside of the Laplace approach is that posterior dependences between posterior marginal draws are not preserved, unlike in the mixture of Gaussians case (Equation (6.15)).
+> Recent work using Gaussian copulas (Chiuchiolo, Niekerk, and Rue 2023) aims to retain the accuracy of the Laplace marginals strategy while obtaining a joint approximation.
 
 \newpage
 
