First pass at completion

--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -65,7 +65,13 @@ And as we discussed, I'd like for you to see if you can drill down into the loca
 Relatedly would you expect the features highlighted by your vignettes to occur in reality in public health settings?
 \end{examiner}
 
-Not yet resolved.
+As I note in Section 4.5.2, I am concerned that the sample size may be insufficient to draw reasonable conclusions based on the localised simulation results:
+
+> With refinements to the sample sizes used, these area-specific measures of performance could enable more nuanced conclusions about the use of spatial random effect models.
+
+I would like to prepare this chapter for publication at some point, in which case I would increase the sample size for the simulation study (as I also note in Section 4.3.4.1 regarding the vignette geometries).
+One idea I have is to extract features of each area, then look to "model" (or simply look for correlations with) the localised area-specific scores based on these features.
+I believe that this could be an interesting approach and help to answer practical questions.
 
 ### Chapter 5
 
@@ -812,7 +818,7 @@ Thank you, I have updated this caption to read:
 \end{examiner}
 
 I imagine that this is in relation to "Preliminary testing of this approach, using `tmbstan` and setting `laplace = TRUE`, did not show immediate success but likely could be worked on.".
-I do not know exactly what was going on, and think that further study of the use of the Laplace approximation within MCMC routines like HMC could be a fruitful direction.
+I do not know exactly what went wrong, and think that further study of the use of the Laplace approximation within MCMC routines like HMC could be a fruitful direction (indeed I remember discussing this at the BayesComp conference in 2023).
 
 \newpage
 
